--- a/index.Rmd
+++ b/index.Rmd
@@ -32,6 +32,8 @@ set.seed(101)
 update_geom_font_defaults(font_rc)
 ```
 
+# Develop Rating-Curves in R {-}
+
 ## Prerequisites {-}
 The following libraries are used, if you are missing use the `install_packages()` function. `smwrBase` must be installed from Github using: `remotes::install_github("USGS-R/smwrBase")`, which might also require that you install `remotes` if you don't have that installed.
 ```{r loadexample, eval=FALSE}
