--- a/index.Rmd
+++ b/index.Rmd
@@ -390,9 +390,6 @@ p1 / p2 /p3 + plot_annotation(tag_levels = "A")
 Plot the model fit and observations:
 
 ```{r}
-##this is going to get our model object for both models:
-rc1_model <- nested_df[[3]][[1]]
-rc2_model <- nested_df[[3]][[2]]
 
 ## make a clean data frame to plot the observed data
 df <- nested_df %>%
@@ -429,3 +426,21 @@ ggplot() +
 ```
 
 
+Finally, the model objects can be extracted and used to with `predict` function with new daata sets that have at least the variable `Inst_GH`.
+
+```{r}
+
+##this is going to get our model object for both models:
+rc1_model <- nested_df[[3]][[1]]
+rc2_model <- nested_df[[3]][[2]]
+
+```
+
+The final equation for 2001-2005:
+
+`r paste0("$Q=", coefficients(rc1_model)[["K"]], "(H-", coefficients(rc1_model)[["H_0"]], ")^", coefficients(rc1_model)[["Z"]], "$")`
+
+
+The final equation for 2006-2011:
+
+`r paste0("$Q=", coefficients(rc2_model)[["K"]], "(H-", coefficients(rc2_model)[["H_0"]], ")^", coefficients(rc2_model)[["Z"]], "$")`
