--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,7 @@ title: "Rating-Curve Example"
 author: "Michael Schramm"
 date: "`r Sys.Date()`"
 github-repo: mps9506/twri-example-stage-discharge
+bibliography: bibliography.bib
 
 
 ---
@@ -57,7 +58,7 @@ update_geom_font_defaults(font_rc)
 
 ## Data {-}
 
-The code chunk below downlaods some stage and discharge data from a project in Yosemite that is hosted on the CUASHI hydroserver. The `WaterML` package provides access to download the data into R. For any dataset we need date-time, gage height, and measured discharge.
+The code chunk below downlaods some stage and discharge data from a project in Yosemite that is hosted on the CUASHI hydroserver. The `WaterML` package provides access to download the data into R {@kadlec2015}. For any dataset we need date-time, gage height, and measured discharge.
 
 
 ```{r download}
@@ -187,10 +188,8 @@ Looking at the above plot, it appears the primary shift was not seasonal but due
 
 ### Single Power Function {-}
 
-First try the standard power function approach on non-transformed data. We will try against the full dataset then against subset data.
 
-https://www.tandfonline.com/doi/pdf/10.1080/02626667009493957?needAccess=true
-
+@venetis1970note describes the following power function for relating discharge and water level:
 
 $$
 Q = K(H - H_0)^z
@@ -203,7 +202,7 @@ $H$ = stage in feet;
 $H_0$ = stage at zero flow (in feet);
 $K$ and $z$ are parameters determined by fitting stage-discharge measurements.
 
-Sometimes we know $H_0$ based on observed data and can plug the known value in. It is also possible to estimate it using regression. Here I am going to let the non linear least squares solve for the best value because we are likely going to fit multiple models anyways. You should check to make sure that the the solved parameter makes sense (not negative or highly positive). $K$ is equal to the discharge at which $(H-H_0) = 0$ and $Z$ describes the slope. Using the `nls()` function requires the analyst provide some starting parameters, the choice of starting parameters is important because the model can converge on the wrong solution or fail to find a solution if the parameters are far away from the optimal answer. Using the `nls_multstart()` function from the `nls.mutlistart` package, we can provide a range of possible starting values and the function will iterate combinations of starting values and select the best model using information theory metrics.
+Sometimes we know $H_0$ based on observed data and can plug the known value in. It is also possible to estimate it using regression. Here I am going to let the non linear least squares solve for the best value because we are likely going to fit multiple models anyways. You should check to make sure that the the solved parameter makes sense (not negative or highly positive). $K$ is equal to the discharge at which $(H-H_0) = 0$ and $Z$ describes the slope. Using the `nls()` function requires the analyst provide some starting parameters, the choice of starting parameters is important because the model can converge on the wrong solution or fail to find a solution if the parameters are far away from the optimal answer. Using the `nls_multstart()` function from the `nls.mutlstart` package, we can provide a range of possible starting values and the function will iterate combinations of starting values and select the best model using information theory metrics {@padfield2020}.
 
 
 
@@ -290,7 +289,7 @@ So it is clear that we have an issue with the residuals. The residuals are sligh
 
 ### Multiple Functions {-}
 
-We want to make two rating curves: (1) water years 2001-2005 and (2) 2006-2011. The `mutate`, `group_by`, and `nest` functions allow us to created a nested dataframe. If you haven't worked with nested data before this looks weird. There is one column with the varaiable name, `rc_group`, and another column that actually contains dataframes in each row. These dataframes have just the grouped data inside of them. The reason we do this is so we can run the `nlsLM` function using each data frame in one function call.
+We want to make two rating curves: (1) water years 2001-2005 and (2) 2006-2011. The `mutate`, `group_by`, and `nest` functions allow us to created a nested dataframe. If you haven't worked with nested data before this looks weird. There is one column with the varaiable name, `rc_group`, and another column that actually contains dataframes in each row. These dataframes have just the grouped data inside of them. The reason we do this is so we can run the `nls_multstart` function using each data frame in one function call.
 
 
 ```{r}
@@ -389,7 +388,7 @@ p1 / p2 /p3 + plot_annotation(tag_levels = "A")
 
 Plot the model fit and observations:
 
-```{r}
+```{r final, fig.cap="Final model fits"}
 
 ## make a clean data frame to plot the observed data
 df <- nested_df %>%
@@ -425,8 +424,7 @@ ggplot() +
   labs(x = "Gage Height [cm]", y = "Discharge [cfs]")
 ```
 
-
-Finally, the model objects can be extracted and used to with `predict` function with new daata sets that have at least the variable `Inst_GH`.
+Figure \@ref(fig.final) indicates a good visual fit for both rating curves. Now that we have reasonable curves, the next step would be to utilize the curves for estimating discharge. If you are exporting to Excel or another program, the model coeefcients are printed above and can be obtained as shown below.
 
 ```{r}
 
@@ -437,7 +435,8 @@ rc2_model <- nested_df[[3]][[2]]
 ```
 
 
-```{r warning=FALSE, include=FALSE}
+```{r}
+## Obtain K, H0, and Z for each curve
 rc1K <- round(coefficients(rc1_model)[["K"]], 3)
 rc2K <- round(coefficients(rc2_model)[["K"]], 3)
 
@@ -458,3 +457,6 @@ The final equation for 2001-2005:
 The final equation for 2006-2011:
 
 `r paste0("$Q=", rc2K, "(H-", rc2H0, ")^{", rc2Z, "}$")`
+
+
+If you import a new gage height dataset into R, then simply `predict(rc1_model, newdata)` where `newdata` is a dataframe with Inst_GH as a variable.
