--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,8 @@ author: "Michael Schramm"
 date: "`r Sys.Date()`"
 github-repo: mps9506/twri-example-stage-discharge
 bibliography: bibliography.bib
+biblio-style: "apalike"
+link-citations: true
 
 
 ---
@@ -58,7 +60,7 @@ update_geom_font_defaults(font_rc)
 
 ## Data {-}
 
-The code chunk below downlaods some stage and discharge data from a project in Yosemite that is hosted on the CUASHI hydroserver. The `WaterML` package provides access to download the data into R {@kadlec2015}. For any dataset we need date-time, gage height, and measured discharge.
+The code chunk below downlaods some stage and discharge data from a project in Yosemite that is hosted on the CUASHI hydroserver. The `WaterML` package provides access to download the data into R [@kadlec2015]. For any dataset we need date-time, gage height, and measured discharge.
 
 
 ```{r download}
@@ -202,7 +204,7 @@ $H$ = stage in feet;
 $H_0$ = stage at zero flow (in feet);
 $K$ and $z$ are parameters determined by fitting stage-discharge measurements.
 
-Sometimes we know $H_0$ based on observed data and can plug the known value in. It is also possible to estimate it using regression. Here I am going to let the non linear least squares solve for the best value because we are likely going to fit multiple models anyways. You should check to make sure that the the solved parameter makes sense (not negative or highly positive). $K$ is equal to the discharge at which $(H-H_0) = 0$ and $Z$ describes the slope. Using the `nls()` function requires the analyst provide some starting parameters, the choice of starting parameters is important because the model can converge on the wrong solution or fail to find a solution if the parameters are far away from the optimal answer. Using the `nls_multstart()` function from the `nls.mutlstart` package, we can provide a range of possible starting values and the function will iterate combinations of starting values and select the best model using information theory metrics {@padfield2020}.
+Sometimes we know $H_0$ based on observed data and can plug the known value in. It is also possible to estimate it using regression. Here I am going to let the non linear least squares solve for the best value because we are likely going to fit multiple models anyways. You should check to make sure that the the solved parameter makes sense (not negative or highly positive). $K$ is equal to the discharge at which $(H-H_0) = 0$ and $Z$ describes the slope. Using the `nls()` function requires the analyst provide some starting parameters, the choice of starting parameters is important because the model can converge on the wrong solution or fail to find a solution if the parameters are far away from the optimal answer. Using the `nls_multstart()` function from the `nls.mutlstart` package, we can provide a range of possible starting values and the function will iterate combinations of starting values and select the best model using information theory metrics [@padfield2020].
 
 
 
@@ -460,3 +462,5 @@ The final equation for 2006-2011:
 
 
 If you import a new gage height dataset into R, then simply `predict(rc1_model, newdata)` where `newdata` is a dataframe with Inst_GH as a variable.
+
+# References {-}
